Added changes after code review again